// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Home Page renders additional videos from useAPI result when scrollbar is at bottom 1`] = `
<div>
  <div
    class="sc-hvigdm gdIrIS"
    id="homeContainer"
  >
    <p>
      Video 1
    </p>
    <p>
      Video 2
    </p>
    <p>
      Video 3
    </p>
    <p>
      Video 4
    </p>
    <p>
      Video 5
    </p>
    <p>
      Video 6
    </p>
  </div>
</div>
`;

exports[`Home Page renders videos from useAPI result 1`] = `
<div>
  <div
    class="sc-hvigdm gdIrIS"
    id="homeContainer"
  >
    <p>
      Video 1
    </p>
    <p>
      Video 2
    </p>
    <p>
      Video 3
    </p>
  </div>
</div>
`;

exports[`Home Page shows error message when hasError is set 1`] = `
<div>
  <div
    class="sc-hvigdm gdIrIS"
    id="homeContainer"
  >
    <p>
      API error
    </p>
  </div>
</div>
`;

exports[`Home Page shows loader when isLoading is true 1`] = `
<div>
  <div
    class="sc-hvigdm gdIrIS"
    id="homeContainer"
  >
    <div
      class="sc-bRKDuR fMrgJQ"
      role="progressbar"
    >
      <svg
        class="spinner"
        viewBox="0 0 50 50"
      >
        <circle
          class="path"
          cx="25"
          cy="25"
          fill="none"
          r="20"
          stroke-width="5"
        />
      </svg>
    </div>
  </div>
</div>
`;
